<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<artifactId>repos-indexing</artifactId>
	<version>0.21.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	
	<name>${project.artifactId}-${project.version}</name>
	<url>http://www.repos.se/</url>
	
	<parent>
		<groupId>se.repos</groupId>
		<artifactId>maven-parent</artifactId>
		<version>11.0.2</version>
		<relativePath/>
	</parent>
	
	<scm>
		<developerConnection>scm:svn:https://labs.repos.se/svn/${project.artifactId}/trunk</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<issueManagement>
		<system>Trac</system>
		<url>https://labs.repos.se/trac/</url>
	</issueManagement>

	<repositories>
		<repository>
			<id>repos.open.repo</id>
			<name>Simonsoft / Repos Open Repository</name>
			<url>http://opensource.simonsoft.se/maven/</url>
		</repository>		
	</repositories>

	<properties>
		<solr-version>9.6.1</solr-version>
		
		<quarkus-plugin.version>3.34.6</quarkus-plugin.version>
		<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
		<quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
		<quarkus.platform.version>3.34.6</quarkus.platform.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		
		<surefire-plugin.version>3.2.5</surefire-plugin.version>
	</properties>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${quarkus.platform.group-id}</groupId>
				<artifactId>${quarkus.platform.artifact-id}</artifactId>
				<version>${quarkus.platform.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>	

	<dependencies>
		<dependency>
            <groupId>jakarta.enterprise</groupId>
            <artifactId>jakarta.enterprise.cdi-api</artifactId>
        </dependency>
		<dependency>
			<groupId>se.simonsoft</groupId>
			<artifactId>quarkus-svn-extension</artifactId>
			<version>1.0.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.fntsoftware</groupId>
			<artifactId>solr</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>se.simonsoft</groupId>
			<artifactId>cms-item</artifactId>
			<version>3.2.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.solr</groupId>
			<artifactId>solr-solrj</artifactId>
			<version>${solr-version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.16.1</version>
		</dependency>
		<!-- Not used at this time. See ItemContentsStream. 
		<dependency>
			<groupId>net.sf.jsignature.io-tools</groupId>
			<artifactId>easystream</artifactId>
			<version>1.2.15</version>
		</dependency>
		-->
		<dependency>
		
			<groupId>org.apache.solr</groupId>
			<artifactId>solr-test-framework</artifactId>
			<version>${solr-version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>slf4j-log4j12</artifactId>
					<groupId>org.slf4j</groupId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-slf4j-impl</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Keep Solr test framework's Log4j core aligned with the API version selected by Quarkus. -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.25.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>se.simonsoft</groupId>
			<artifactId>cms-testing</artifactId>
			<version>3.1.0-SNAPSHOT</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${slf4j-version}</version>
			<scope>test</scope>
		</dependency>		
		<!-- Would like to upgrade to core Guice no_aop but seems incompatible with guava version used by SolR 6.6.6. -->
		<dependency>
			<groupId>org.sonatype.sisu</groupId>
			<artifactId>sisu-guice</artifactId>
			<version>3.2.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.sonatype.sisu.inject</groupId>
			<artifactId>guice-multibindings</artifactId>
			<version>3.2.3</version>
			<scope>test</scope>		
		</dependency>		
		<dependency>
			<groupId>se.simonsoft</groupId>
			<artifactId>cms-backend-svnkit</artifactId>
			<version>4.0.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <argLine>
                        -Dtest.solr.allowed.securerandom=NativePRNG
                        -Dtests.locale=en-US
                        -Dtests.timezone=UTC
                        --add-opens java.base/java.lang=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
		      <groupId>org.jboss.jandex</groupId>
		      <artifactId>jandex-maven-plugin</artifactId>
		      <version>1.2.1</version>
		      <executions>
		        <execution>
		          <id>make-index</id>
		          <goals>
		            <goal>jandex</goal>
		          </goals>
		        </execution>
		      </executions>
		    </plugin>
		</plugins>
	</build>
</project>
